--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:28.3.0"
     implementation "com.android.support:cardview-v7:28.3.0"
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
 
 
