--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion "29.0.1"
     defaultConfig {
         applicationId "com.example.suvasam"
         minSdkVersion 21
@@ -32,11 +31,15 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     implementation 'com.google.firebase:firebase-analytics:17.0.1'
     implementation 'com.google.firebase:firebase-database:19.0.0'
-    implementation "com.android.support:design:28.3.0"
-    implementation "com.android.support:recyclerview-v7:28.3.0"
-    implementation "com.android.support:cardview-v7:28.3.0"
+    implementation "com.android.support:design:27.3.0"
+    implementation "com.android.support:recyclerview-v7:27.3.0"
+    implementation "com.android.support:cardview-v7:27.3.0"
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0-alpha01'
+    implementation 'com.android.support:appcompat-v7:27.0.0';
+    implementation 'com.android.support:support-v13:27.0.0'
+
 }
 
 
